[WBPS]- Setup Sub-package + Register Accounts

--- a/cavefish-server/.vscode/settings.json
+++ b/cavefish-server/.vscode/settings.json
@@ -3,5 +3,6 @@
   "ctags.executeAtStartup": true,
   "ctags.onSave": true,
   "ctags.command": "./gen-tags.sh",
-  "editor.gotoLocation.multipleDefinitions": "goto"
+  "editor.gotoLocation.multipleDefinitions": "goto",
+  "editor.fontLigatures": true
 }
