--- a/cavefish-server/cavefish/client/cavefish-client.cabal
+++ b/cavefish-server/cavefish/client/cavefish-client.cabal
@@ -53,7 +53,7 @@ common project-config
     ViewPatterns
 
   ghc-options:
-    -Wall -Wcompat -Widentities -Wincomplete-record-updates
+    -Wall -Werror -Wcompat -Widentities -Wincomplete-record-updates
     -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields
     -Wredundant-constraints -Wcompat -Wunused-packages
     -Wmissing-import-lists
