Fixed compiler warnings and relaxed strict build rules for selected packages.fixed some warnings and relaxed rules for some packages

--- a/cavefish-server/wbps/wbps.cabal
+++ b/cavefish-server/wbps/wbps.cabal
@@ -84,7 +84,7 @@ test-suite wbps-unit-tests
     type:             exitcode-stdio-1.0
     hs-source-dirs:   tests/unit
     main-is:          Main.hs
-    other-modules:  Spec
+    other-modules:  
     build-depends:
         , wbps
         , tasty
