--- a/cavefish-server/cavefish/client-backend/cavefish-client-backend.cabal
+++ b/cavefish-server/cavefish/client-backend/cavefish-client-backend.cabal
@@ -1,24 +1,12 @@
-cabal-version:   3.12
-name:            cavefish-server
+cabal-version:   3.4
+name:            cavefish-client-backend
 version:         0.1.0.0
 
--- synopsis:
--- description:
 license:         MIT
 license-file:    LICENSE
 
--- author:
--- maintainer:
--- copyright:
 build-type:      Simple
 extra-doc-files: CHANGELOG.md
-
--- extra-source-files:
-
-flag ide-stub
-  description: Use IDE stub for PlutusTx compile (for HLS only)
-  default:     False
-  manual:      True
 
 common base
   build-depends: base >=4.9 && <5
@@ -53,28 +41,45 @@ common project-config
     ViewPatterns
 
   ghc-options:
-    -Wall -Werror -Wcompat -Widentities -Wincomplete-record-updates
+    -Wall -Wcompat -Widentities -Wincomplete-record-updates
     -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields
-    -Wredundant-constraints -Wcompat -Wunused-packages
-    -Wmissing-import-lists
+    -Wredundant-constraints -Wcompat
 
 library
   import:          base, project-config
   hs-source-dirs:  src
   exposed-modules:
-    Sp.Emulator
-    Sp.Server
+    ClientBackend.Server
+  other-modules:
+    ClientBackend.Api
+    ClientBackend.App
+    ClientBackend.Handlers
+    ClientBackend.Helpers
+    ClientBackend.Types
 
   build-depends:
+    , cavefish-core
+    , cavefish-client
+    , aeson
     , bytestring
     , cardano-api
-    , cavefish-core
+    , cardano-binary
+    , cardano-crypto-class
+    , cardano-ledger-alonzo
+    , cardano-ledger-core    
+    , cborg
+    , containers
     , cooked-validators
     , crypton
     , data-default
+    , memory
     , mtl
+    , plutus-core
     , plutus-ledger
+    , plutus-ledger-api
     , plutus-script-utils
+    , plutus-tx
+    , plutus-tx-plugin
     , servant
     , servant-server
     , stm
@@ -86,31 +91,16 @@ library
     , wai
     , wai-cors
 
-  if flag(ide-stub)
-    cpp-options: -DIDE_STUB
-
-executable cavefish-server
+executable cavefish-client-backend
   import:         base, project-config
   hs-source-dirs: app
   main-is:        Main.hs
   build-depends:
+    , cavefish-client-backend
     , bytestring
-    , cavefish-core
-    , cavefish-server
     , cooked-validators
     , crypton
     , stm
+    , warp
     , wai
     , wai-cors
-    , warp
-
-  if flag(ide-stub)
-    cpp-options: -DIDE_STUB
-
-test-suite test
-  import:         base, project-config
-  type:           exitcode-stdio-1.0
-  main-is:        Main.hs
-  hs-source-dirs: test
-  other-modules:  Spec
-  build-depends:  hspec
