nixos git-lfs snarkJS support (#51)
* Fix build warnings

* Add snapJS and npm to nix shell

Update the read me, add snapJS, npm, hie

--- a/cavefish-server/.gitignore
+++ b/cavefish-server/.gitignore
@@ -32,4 +32,14 @@ cavefish-server/result-*
 .direnv
 .envrc
 
+# ====================================================
+# cardano node logs/socket
+# ====================================================
 var/
+
+# ====================================================
+# node, npm
+# ====================================================
+node_modules/
+package-lock.json
+package.json
