--- a/cavefish-server/wbps/wbps.cabal
+++ b/cavefish-server/wbps/wbps.cabal
@@ -65,9 +65,9 @@ library
         WBPS.Adapter.Data  
     build-depends:
       ,  bytestring
-      ,  shh ^>= 0.7.3
-      ,  path ^>= 0.9.6
-      ,  path-io ^>= 1.8.2
+      , shh    >= 0.7.0  && < 0.8
+      , path   >= 0.9.0  && < 0.10
+      , path-io>= 1.8.0  && < 1.9
       , transformers
       , validation
       , mtl
