--- a/cavefish-server/cavefish/core/cavefish-core.cabal
+++ b/cavefish-server/cavefish/core/cavefish-core.cabal
@@ -88,7 +88,9 @@ library
     , crypton
     , memory
     , mtl
+    , path
     , plutus-core
+    , path-io
     , plutus-ledger
     , plutus-ledger-api
     , plutus-script-utils
@@ -99,6 +101,7 @@ library
     , text
     , time
     , uuid
+    , wbps
 
   if flag(ide-stub)
     cpp-options: -DIDE_STUB
