--- a/cavefish-server/cavefish/server/cavefish-server.cabal
+++ b/cavefish-server/cavefish/server/cavefish-server.cabal
@@ -81,10 +81,9 @@ library
     , text
     , time
     , transformers
-    , transformers-either
-    , uuid
     , wai
     , wai-cors
+    , wbps
 
   if flag(ide-stub)
     cpp-options: -DIDE_STUB
@@ -100,8 +99,6 @@ executable cavefish-server
     , cooked-validators
     , crypton
     , stm
-    , wai
-    , wai-cors
     , warp
 
   if flag(ide-stub)
