--- a/cavefish-server/cavefish/tests/cavefish-tests.cabal
+++ b/cavefish-server/cavefish/tests/cavefish-tests.cabal
@@ -88,6 +88,7 @@ test-suite test
     Test.Common
 
   build-depends:
+    , aeson
     , bytestring
     , cardano-api
     , cavefish-client
@@ -96,15 +97,20 @@ test-suite test
     , containers
     , cooked-validators
     , crypton
+    , directory
+    , filepath
     , hspec
     , http-client
     , memory
+    , path
     , plutus-ledger
     , plutus-script-utils
     , servant-client
     , servant-server
     , stm
+    , temporary
     , text
     , transformers
     , uuid
     , warp
+    , wbps
