renamed Finalise to askSubmission and grouped logic together

--- a/cavefish-server/cavefish/core/cavefish-core.cabal
+++ b/cavefish-server/cavefish/core/cavefish-core.cabal
@@ -71,6 +71,7 @@ library
     Core.PaymentProof
     Core.Pke
     Core.Proof
+    Core.SP.AskSubmission
     Core.SP.DemonstrateCommitment
     Core.SP.Register
     Core.TxAbs
