Add tigher ghc flags
Add ghc flags for cleaner build.

--- a/cavefish-server/cavefish/client-backend/cavefish-client-backend.cabal
+++ b/cavefish-server/cavefish/client-backend/cavefish-client-backend.cabal
@@ -41,7 +41,8 @@ common project-config
   ghc-options:
     -Wall -Wcompat -Widentities -Wincomplete-record-updates
     -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields
-    -Wredundant-constraints -Wcompat
+    -Wredundant-constraints -Wcompat -Wunused-packages
+    -Wmissing-import-lists
 
 library
   import:          base, project-config
