reworked end to end test as it will drive the implementation of the rest of the flow

--- a/cavefish-server/.gitignore
+++ b/cavefish-server/.gitignore
@@ -44,4 +44,8 @@ node_modules/
 package-lock.json
 package.json
 
+# ====================================================
+# project-local outputs
+# ====================================================
+wbps/output/
 
