--- a/cavefish-server/cavefish/tests/cavefish-tests.cabal
+++ b/cavefish-server/cavefish/tests/cavefish-tests.cabal
@@ -83,9 +83,9 @@ test-suite test
   main-is:        Main.hs
   hs-source-dirs: test
   other-modules:
+    Adapter.Cavefish.Client
     Core.CborSpec
     Spec
-    Test.Common
 
   build-depends:
     , aeson
