Add babyjubjub keygen tooling and streamline SP/client flow

--- a/cavefish-server/cavefish/core/cavefish-core.cabal
+++ b/cavefish-server/cavefish/core/cavefish-core.cabal
@@ -74,6 +74,7 @@ library
     Core.PaymentProof
     Core.Pke
     Core.Proof
+    Core.SP.AskCommitmentProof
     Core.SP.AskSubmission
     Core.SP.DemonstrateCommitment
     Core.SP.FetchAccount
