Refine intent parsing and CLI client stubs

--- a/cavefish-server/wbps/wbps.cabal
+++ b/cavefish-server/wbps/wbps.cabal
@@ -60,6 +60,8 @@ library
     WBPS.Adapter.Path
     WBPS.Commitment
     WBPS.Core.BuildCommitment
+    WBPS.Core.Cardano.Cbor
+    WBPS.Core.Cardano.TxAbs
     WBPS.Core.FileScheme
     WBPS.Core.Keys.Ed25519
     WBPS.Core.Keys.ElGamal
@@ -72,18 +74,26 @@ library
     , aeson
     , base16-bytestring
     , bytestring
-    , cardano-api           ^>=10.16.1.0
+    , cardano-api            ^>=10.16.1.0
+    , cardano-binary         ^>=1.7.1.0
     , cardano-crypto-class
+    , cardano-ledger-alonzo  ^>=1.13.0.0
+    , cardano-ledger-api     ^>=1.11.0.0
+    , cardano-ledger-core    ^>=1.17.0.0
+    , cborg                  ^>=0.2.10.0
+    , containers             ^>=0.6.7
     , cryptonite
     , filepath
     , hex-text
     , memory
     , mtl
-    , path                  >=0.9.0      && <0.10
-    , path-io               >=1.8.0      && <1.9
+    , path                   >=0.9.0      && <0.10
+    , path-io                >=1.8.0      && <1.9
+    , plutus-ledger          ^>=1.4.0.0
+    , plutus-ledger-api      ^>=1.45.0.0
     , process
-    , scientific            ^>=0.3.8.0
-    , shh                   >=0.7.0      && <0.8
+    , scientific             ^>=0.3.8.0
+    , shh                    >=0.7.0      && <0.8
     , text
     , transformers
     , validation
