Adjust SP APIs for simplified commitment lifecycle

--- a/cavefish-server/cavefish/server/cavefish-server.cabal
+++ b/cavefish-server/cavefish/server/cavefish-server.cabal
@@ -99,6 +99,7 @@ executable cavefish-server
     , cavefish-core
     , cavefish-server
     , cooked-validators
+    , data-default
     , stm
     , warp
     , wbps
