--- a/cavefish-server/cavefish/core/cavefish-core.cabal
+++ b/cavefish-server/cavefish/core/cavefish-core.cabal
@@ -62,14 +62,13 @@ library
   import:          base, project-config
   hs-source-dirs:  src
   exposed-modules:
-    Core.Api.Config
     Core.Api.Messages
+    Core.Api.ServerConfiguration
     Core.Api.ServerContext
     Core.Api.State
     Core.CavefishLogEvent
     Core.Intent
     Core.Logging
-    Core.Observers.Observer
     Core.PaymentProof
     Core.Pke
     Core.Proof
